--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     display: flex;
     justify-content:flex-start;
     gap: 30px;
+    flex-wrap: wrap;
 }
 .book {
     border: 1px solid black;
